# GNSS-Shadowing

./: CMakeLists.txt  LICENSE  README.md  new_project.sh
cmake/: Common.cmake  DetectPython.cmake
common/: CMakeLists.txt
common/include/common/: CMakeLists.txt  csvRow.h  fileStorageUtil.h  math.h  measureTime.h  rotationMatrices.h  setUtils.h  simpleStatistics.h  simpleStatistics.h.cpp  stringUtils.h  timing.h  types.h  version.h.in
common/src/: CMakeLists.txt  csvRow.cpp  measureTime.cpp  stringUtils.cpp  timing.cpp
data/: CMakeLists.txt  current.tle  uni.obj.mtl
data/GPS_InfoAndNMEALogging/: NMEA_Log__5_27_16__Nachm.__03_26_2017.txt  NMEA_Log__5_28_14__Nachm.__03_26_2017.txt  NMEA_Log__5_28_52__Nachm.__03_26_2017.txt  NMEA_Log__5_29_58__Nachm.__03_26_2017.txt  NMEA_Log__5_35_13__Nachm.__03_26_2017.txt  NMEA_Log__5_35_46__Nachm.__03_26_2017.txt  NMEA_Log__5_36_34__Nachm.__03_26_2017.txt  NMEA_Log__5_37_23__Nachm.__03_26_2017.txt  NMEA_Log__5_38_46__Nachm.__03_26_2017.txt  NMEA_Log__5_39_57__Nachm.__03_26_2017.txt  NMEA_Log__5_41_52__Nachm.__03_26_2017.txt  NMEA_Log__5_42_46__Nachm.__03_26_2017.txt  NMEA_Log__5_43_39__Nachm.__03_26_2017.txt  NMEA_Log__5_44_40__Nachm.__03_26_2017.txt  NMEA_Log__5_45_35__Nachm.__03_26_2017.txt  NMEA_Log__5_46_44__Nachm.__03_26_2017.txt  NMEA_Log__6_01_26__Nachm.__03_26_2017.txt  NMEA_Log__6_02_05__Nachm.__03_26_2017.txt  NMEA_Log__6_02_43__Nachm.__03_26_2017.txt  NMEA_Log__6_04_24__Nachm.__03_26_2017.txt  NMEA_Log__6_06_43__Nachm.__03_26_2017.txt  NMEA_Log__6_07_45__Nachm.__03_26_2017.txt  NMEA_Log__6_57_06__Nachm.__03_07_2017.txt  NMEA_Log__7_01_12__Nachm.__03_07_2017.txt
data/GPS_InfoAndNMEALogging/Planned/: NMEA_Log__4_13_21__Nachm.__04_01_2017.txt  NMEA_Log__4_26_03__Nachm.__04_01_2017.txt  plan1.txt  plan1evaluation.txt  plan2.txt  plan2evaluation.txt
data/GPS_InfoAndNMEALogging/T/: NMEA_Log__2_47_25__Nachm.__03_28_2017.txt  NMEA_Log__2_48_20__Nachm.__03_28_2017.txt  NMEA_Log__2_49_19__Nachm.__03_28_2017.txt  NMEA_Log__2_50_13__Nachm.__03_28_2017.txt
data/GPS_InfoAndNMEALogging/Wegpunkte/: NMEA_Log__2_52_48__Nachm.__03_28_2017.txt  NMEA_Log__2_55_46__Nachm.__03_28_2017.txt  NMEA_Log__2_58_03__Nachm.__03_28_2017.txt  NMEA_Log__3_01_33__Nachm.__03_28_2017.txt  NMEA_Log__3_03_11__Nachm.__03_28_2017.txt  NMEA_Log__3_04_34__Nachm.__03_28_2017.txt  NMEA_Log__3_05_47__Nachm.__03_28_2017.txt  NMEA_Log__3_07_17__Nachm.__03_28_2017.txt  NMEA_Log__3_09_42__Nachm.__03_28_2017.txt  NMEA_Log__3_11_04__Nachm.__03_28_2017.txt  NMEA_Log__3_12_54__Nachm.__03_28_2017.txt  NMEA_Log__3_14_41__Nachm.__03_28_2017.txt  NMEA_Log__3_16_46__Nachm.__03_28_2017.txt  NMEA_Log__3_17_52__Nachm.__03_28_2017.txt  staticmap.txt
data/archive/: 2017-03-26.tle  2017-03-28.tle  2017-03-29.tle  2017-03-31.tle  2017-04-02.tle  2017-04-03.tle  2017-04-07.tle  2017-04-08.tle  2017-04-11.tle  2017-04-14.tle  2017-04-16.tle  2017-04-19.tle  2017-04-27.tle  2017-04-28.tle  2017-04-29.tle  2017-04-30.tle  2017-05-01.tle  galileo.2017-03-27.tle.txt  galileo.2017-03-28.tle.txt  galileo.2017-03-29.tle.txt  galileo.2017-04-01.tle.txt  galileo.2017-04-02.tle.txt  galileo.2017-04-03.tle.txt  galileo.2017-04-07.tle.txt  galileo.2017-04-09.tle.txt  galileo.2017-04-11.tle.txt  galileo.2017-04-14.tle.txt  galileo.2017-04-16.tle.txt  galileo.2017-04-19.tle.txt  galileo.2017-04-27.tle.txt  galileo.2017-04-28.tle.txt  galileo.2017-04-29.tle.txt  galileo.2017-04-30.tle.txt  galileo.2017-05-01.tle.txt  glo-ops.2017-03-26.tle.txt  glo-ops.2017-03-28.tle.txt  glo-ops.2017-03-29.tle.txt  glo-ops.2017-04-01.tle.txt  glo-ops.2017-04-02.tle.txt  glo-ops.2017-04-03.tle.txt  (+28 more)
eval/: CMakeLists.txt
eval/include/eval/: CMakeLists.txt  utils.h
eval/src/: CMakeLists.txt  benchmark.cpp  benchmark.sh  benchmarkLazy.cpp  benchmarkLazy.sh  benchmarkOnlyDS.cpp  benchmarkOnlyDS.sh  eval.sh  eval_plans.sh  eval_pred.sh  mean_loc_dop.cpp  mean_loc_dop_against_pred.cpp  plan.cpp  plan1.txt  plan2.txt  readme.txt  utils.cpp
gui/: CMakeLists.txt
gui/src/: CMakeLists.txt  app.cpp  app.h  camera.cpp  camera.h  glwidget.cpp  glwidget.h  keyboard.cpp  keyboard.h  keyboardControl.cpp  keyboardControl.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  renderObject.cpp  renderObject.h
mapping/: CMakeLists.txt
mapping/src/: CMakeLists.txt  dopMap.cpp  fourierAnalysis.cpp  fourierSettings.xml  main.cpp  mapCoordinateConverter.cpp  mapProperties.cpp  mapper.cpp  mapperLazyTimesteps.cpp  mapperSettings.xml  occupancyMap.cpp  shadowMap.cpp  visibilityMap.cpp
planning/: CMakeLists.txt
planning/include/: CMakeLists.txt
planning/src/: CMakeLists.txt  main.cpp  plan1.xml  plan2.xml  plan3.xml  plannerSettings.xml  problems.cpp
project_template/: CMakeLists.txt  readme.template.txt
project_template/src/: CMakeLists.txt  main.cpp
pythonBindings/: CMakeLists.txt
pythonBindings/include/pythonBindings/: CMakeLists.txt  arrayBindings.h  coordinateSystemBindings.h  cvMatBindings.h  mappingBindings.h  objBindings.h  planningBindings.h  satBindings.h  shadowingBindings.h  worldBindings.h
pythonBindings/src/: CMakeLists.txt  bindings.cpp  cv2MatBindings.cpp  cv3MatBindings.cpp  main.cpp  test_coordinateSystemBindings.py  test_mappingBindings.py  test_objBindings.py  test_planningBindings.py  test_satBindings.py  test_shadowingBindings.py  test_worldBindings.py
sat/: CMakeLists.txt
sat/include/sat/: CMakeLists.txt  availableSats.h  coordinateSystems.h  dop.h  nmea.h  sat.h  satPositionProvider.h  satStore.h  types.h  wdop.h
sat/src/: CMakeLists.txt  availableSats.cpp  coordinateSystems.cpp  dop.cpp  main.cpp  nmea.cpp  sat.cpp  satPositionProvider.cpp  satStore.cpp  wdop.cpp
sgp4_vallado/: CMakeLists.txt  readme.md
sgp4_vallado/include/sgp4_vallado/: CMakeLists.txt  sgp4coord.h  sgp4ext.h  sgp4unit.h  version.h.in
sgp4_vallado/src/: CMakeLists.txt  main.cpp  sgp4coord.cpp  sgp4ext.cpp  sgp4io.cpp  sgp4unit.cpp
shadowing/: CMakeLists.txt
shadowing/src/: CMakeLists.txt  main.cpp  mesh.cpp  shadowing.cpp
world/: CMakeLists.txt
world/src/: CMakeLists.txt  main.cpp  version.cpp  world.cpp
(+25 files in other folders)
